--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "^8.4.1"
 deptry = "^0.23.0"
 isort = "^6.0.1"
 pylint = "^3.3.7"
+pyupgrade-directories = "^0.3.0"
 
 [tool.black]
 line-length = 88
@@ -105,3 +106,6 @@ ignore = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]
 
 [tool.pylint.format]
 max-line-length = 88
+
+[tool.pyupgrade]
+py312-plus = true
