feat(Commitizen): Add Commitizen

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
+exclude: ^(tests|docs)/
 fail_fast: true
-exclude: '^(tests|docs)/'
-
 repos:
   - repo: local
     hooks:
@@ -57,3 +56,10 @@ repos:
         entry: poetry run pip-audit --ignore-vuln PYSEC-2022-42969
         language: system
         pass_filenames: false
+  
+  - hooks:
+    - id: commitizen
+    - id: commitizen-branch
+      stages: [pre-push]
+    repo: https://github.com/commitizen-tools/commitizen
+    rev: v4.8.3
