fix(Taskfile): Added restriction on the code-upgrade command for Windows

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -38,6 +38,7 @@ tasks:
 
   code-upgrade:
     desc: Updates code syntax to newer versions
+    platforms: [linux, darwin]
     cmds:
       - find . -type f -name "*.py"
         ! -path "./.git/*"
