--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ isort = "^6.0.1"
 pylint = "^3.3.7"
 pyupgrade-directories = "^0.3.0"
 commitizen = "^4.8.3"
+docformatter = "^1.7.7"
 
 [tool.black]
 line-length = 88
@@ -110,6 +111,23 @@ max-line-length = 88
 
 [tool.pyupgrade]
 py312-plus = true
+
+[tool.docformatter]
+wrap-summaries = 88
+make-summary-multi-line = true
+pre-summary-newline = false
+in-place = true
+docstring-quotes = '"""'
+exclude = '''
+(
+  \.git/.*|
+  __pycache__/.*|
+  build/.*|
+  dist/.*|
+  \.venv/.*|
+  tmp/.*
+)
+'''
 
 [tool.commitizen]
 name = "cz_conventional_commits"
