fix(docformatter): Update docformatter config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
 
       - id: docformatter   
         name: Docstring formatter   
-        entry: poetry run docformatter -r -i .
+        entry: poetry run docformatter .
         language: system
         pass_filenames: false
 
