--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pylint = "^3.3.7"
 pyupgrade-directories = "^0.3.0"
 commitizen = "^4.8.3"
 docformatter = "^1.7.7"
+autoflake = "^2.3.1"
 
 [tool.black]
 line-length = 88
@@ -121,6 +122,18 @@ black = true
 docstring-quotes = '"""'
 in-place = true
 recursive = true
+exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+skip = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]
+
+[tool.autoflake]
+in_place = true
+recursive = true
+remove_all_unused_imports = true
+ignore_init_module_imports = true
 exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp"]
 
 [tool.commitizen]
