build: replace Poetry with uv and migrate tooling to Ruff

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,107 +1,114 @@
 version: '3'
 
 tasks:
-  install:
-    desc: Install dependencies using poetry
+  # ======== Environment ========
+  sync:
+    desc: Sync dependencies (dev group) using uv
     cmds:
-      - poetry install --no-root
-    
+      - uv sync --group dev
+
   precommit:
-    desc: Install git hooks via pre-commit
+    desc: Install git hooks
+    deps: [sync]
     cmds:
-      - poetry run pre-commit install
+      - uv run pre-commit install
 
   init:
-    desc: Full project setup — install deps, configure pre-commit
-    deps: [install, precommit]
+    desc: Full project setup
+    deps: [sync, precommit]
 
+  # ======== Commitizen ========
   cz-commit:
-    desc: Create a commit using Commitizen (Conventional Commits standard)
+    desc: Commit using Conventional Commits
+    deps: [sync]
     cmds:
-      - poetry run cz commit
+      - uv run cz commit
 
   cz-check:
-    desc: Check if commit messages follow Conventional Commits
+    desc: Check commit messages
+    deps: [sync]
     cmds:
-      - poetry run cz check
+      - uv run cz check
 
   cz-bump:
-    desc: Bump version, tag, and update changelog using Commitizen
+    desc: Bump version and update changelog
+    deps: [sync]
     cmds:
-      - poetry run cz bump
+      - uv run cz bump
 
   release:
-    desc: Bump version and push tags (run after merge to main)
+    desc: Bump version and push tags
+    deps: [cz-bump]
     cmds:
-      - poetry run cz bump
       - git push --follow-tags
 
-  code-upgrade:
-    desc: Updates code syntax to newer versions
-    platforms: [linux, darwin]
+  # ======== Formatting ========
+  fmt:
+    desc: Auto-fix lint issues and format code
+    deps: [sync]
     cmds:
-      - find . -type f -name "*.py"
-        ! -path "./.git/*"
-        ! -path "./__pycache__/*"
-        ! -path "./build/*"
-        ! -path "./dist/*"
-        ! -path "./.venv/*"
-        ! -path "./tmp/*"
-        -exec poetry run pyupgrade {} +
+      - uv run ruff check . --fix --unsafe-fixes
+      - uv run ruff format .
 
-  format:
-    desc: Code formatting with black and ruff
-    deps: [code-upgrade]
-    cmds:
-      - poetry run ruff check . --fix
-      - poetry run black .
-
+  # ======== Static analysis ========
   lint:
-    desc: Static code analysis with ruff and mypy
+    desc: Run Ruff and MyPy
+    deps: [sync]
     cmds:
-      - poetry run ruff check .
-      - poetry run mypy .
-      - poetry run pylint --jobs=4 .
+      - uv run ruff check .
+      - uv run ruff format --check .
+      - uv run mypy .
 
-  docstyle:
-    desc: Docstring style check
-    cmds:
-      - poetry run interrogate .
-
+  # ======== Dependency hygiene ========
   audit:
-    desc: Dependency vulnerability audit
+    desc: Security audit
+    deps: [sync]
     cmds:
       - poetry run pip-audit --ignore-vuln PYSEC-2022-42969
 
-  deadcode:
-    desc: Find unused code
-    cmds:
-      - poetry run vulture .
-
-  check:
-    desc: Full linting, audit run, and code checks
-    deps: [format, lint, docstyle, audit, deadcode]
-
   unused-libs:
-    desc: Check for unused libraries
+    desc: Detect unused dependencies
+    deps: [sync]
     cmds:
-      - poetry run deptry .
+      - uv run deptry .
 
+  # ======== Full quality gate ========
+  check:
+    desc: Run full quality checks
+    deps: [lint, audit, unused-libs]
+
+  # ======== Tests ========
+  test:
+    desc: Run tests with coverage
+    deps: [sync]
+    cmds:
+      - uv run pytest --cov --cov-report=term-missing --cov-report=xml
+
+  # ======== Run app ========
   run:
     desc: Run the application
+    deps: [sync]
     cmds:
-      - poetry run python -m app.main
+      - uv run python -m app.main
 
+  # ======== Build ========
+  build:
+    desc: Build package (wheel + sdist)
+    deps: [sync]
+    cmds:
+      - uv build
+
+  # ======== Docker ========
   docker-build:
-    desc: Build the application in docker
+    desc: Build Docker image
     cmds:
       - docker build -t python-app .
-  
+
   docker-run:
-    desc: Run the application in docker
+    desc: Run Docker container
     cmds:
       - docker run -it --rm python-app
 
   docker:
-    desc: Start the application in docker
+    desc: Build and run Docker
     deps: [docker-build, docker-run]
